[package]
name = "cert-provider"
version = "0.1.0"
edition = "2021"
description = "ACME certificate provisioning for Rust servers"
license = "MIT OR Apache-2.0"
# repository = "https://github.com/dveon-loch/cert-provider"

[features]
default = []                             # No default provider – user must enable one
tokio-acme = ["dep:tokio-rustls-acme", "dep:rustls-pemfile", "dep:futures"]   # tokio-rustls-acme based impl
rfc8555 = ["dep:acme-rfc8555", "dep:reqwest", "dep:rcgen", "dep:rustls-pemfile", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]   # acme-rfc8555 impl with HTTP-01 solving
dns01 = ["dep:instant-acme", "dep:reqwest", "dep:serde", "dep:serde_json", "dep:rcgen", "dep:x509-parser", "dep:hyper-rustls", "dep:hyper-util", "dep:bytes"]   # DNS-01 challenge provider (bring-your-own DNS)

[dependencies]
# Core
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"                        
rustls-pemfile = { version = "2", optional = true }

# tokio-acme provider
tokio-rustls-acme = { version = "0.9", optional = true }
futures = { version = "0.3", optional = true }
# (rustls is re-exported by tokio-rustls-acme, but we may need to write PEMs manually)

# rfc8555 provider
acme-rfc8555 = { version = "0.3", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
rcgen = { version = "0.14", optional = true }
hyper = { version = "1", optional = true, features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", optional = true, features = ["tokio"] }
http-body-util = { version = "0.1", optional = true }
rustls = {version = "0.23.39", default-features = false}

# dns01 provider
instant-acme = { version = "0.8", optional = true, default-features = false, features = ["ring", "hyper-rustls", "rcgen"] }
hyper-rustls = { version = "0.27", optional = true, default-features = false, features = ["webpki-tokio"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
x509-parser = { version = "0.17", optional = true, default-features = false }
bytes = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"                          # for testing with temporary directories

[lib]
name = "cert_provider"
path = "src/lib.rs"
